WIP p-adic chart

--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -12,6 +12,7 @@ import {
   ManhattanCircle,
   ManhattanPaths,
   PAdicCalculator,
+  PAdicHeatChart,
   StringDistanceExplorer
 } from "story_components";
 
@@ -305,8 +306,7 @@ curiosity.
 
 Here's a higher level few of these different distance metrics for varying primes _p_.
 
-DEMONSTRATION
-Heat map? other topological structure? TBD.
+<PAdicHeatChart />
 
 Surprisingly, this is more than just an intellectual exercise. something something.
 
@@ -336,3 +336,7 @@ Sources:
 - [A technique for computer detection and correction of spelling errors](https://dl.acm.org/citation.cfm?doid=363958.363994)
 
 - [p-adic Numbers, p-adic Analysis, and Zeta-Functions](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.461.4588&rep=rep1&type=pdf), by Neal Koblitz
+
+
+https://www.jstor.org/stable/2323809?read-now=1&seq=10#page_scan_tab_contents
+http://math.uni.lu/eml/projects/reports/P-adics.pdf
