starting PAdicFractalDistance component

--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -12,6 +12,7 @@ import {
   ManhattanCircle,
   ManhattanPaths,
   PAdicCalculator,
+  PAdicFractalDistance,
   PAdicHeatChart,
   StringDistanceExplorer
 } from "story_components";
@@ -313,6 +314,8 @@ Surprisingly, this is more than just an intellectual exercise. something somethi
 p-adic def
 visualize distance differences
 
+<PAdicFractalDistance caption="Figure 7: Foo" />
+
 circles - every point inside is a center
 triangles? - every triangle is isosceles
 exhaustive list of distance metrics - https://en.wikipedia.org/wiki/Ostrowski%27s_theorem
@@ -340,3 +343,5 @@ Sources:
 
 https://www.jstor.org/stable/2323809?read-now=1&seq=10#page_scan_tab_contents
 http://math.uni.lu/eml/projects/reports/P-adics.pdf
+https://www.google.com/search?q=number+theory+as+the+ultimate+physical+theory&oq=Number+theory+as+the+ultimate+physical+theory&aqs=chrome.0.0.366j0j1&sourceid=chrome&ie=UTF-8
+
