--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -307,7 +307,7 @@ curiosity.
 
 Here's a higher level few of these different distance metrics for varying primes _p_.
 
-<PAdicHeatChart caption="Figure 6: A heat chart of p-adic distances for numbers between 1 and 50. The darker the square, the closer the distance to 1. The lighter the square, the closer the distance to 0. Hover over a square to see the numbers and their distance."/>
+<PAdicHeatChart caption="Figure 6: A heat chart of p-adic distances for pairs of numbers between 1 and 25. The darker the square, the closer the distance to 1. The lighter the square, the closer the distance to 0. Hover over a square to see the numbers and their distance."/>
 
 Surprisingly, this is more than just an intellectual exercise. something something.
 
