changing caption instructions for mobile

--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -320,7 +320,7 @@ distances are equal along diagonals that move up and to the right. This is
 because adding the same value to two numbers has no effect on their *p*-adic
 distance: 10 - 2 has a 2-adic distance of 0.125, just as (10 + 5) - (2 + 5) = 15 - 7 does.
 
-<PAdicHeatChart caption="Figure 6: A heat chart of p-adic distances for pairs of numbers between 1 and 25. The darker the square, the closer the distance to 1. The lighter the square, the closer the distance to 0. Hover over a square to see the numbers and their distance."/>
+<PAdicHeatChart caption="Figure 6: A heat chart of p-adic distances for pairs of numbers between 1 and 25. The darker the square, the closer the distance to 1. The lighter the square, the closer the distance to 0. Hover over (or tap on) a square to see the numbers and their distance."/>
 
 While the chart above can show us several distance calculations at a glance, it
 also has a flaw. By putting numbers along the top and right in increasing order
