adding outline to nav text if image is too light

--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -4,6 +4,7 @@ date: "2019-07-01"
 featured_image: "../../images/featured_images/keeping_distances.jpg"
 caption: "distance caption"
 featured_image_caption: "distance image caption"
+outline: true
 ---
 
 import {
@@ -306,9 +307,9 @@ For a given prime _p_, this distance is called the **p-adic distance**.
 
 Here's a demonstration that will allow you to play around with these ideas in
 more detail. You can select a prime and then calculate the *p*-adic distance
-between any two whole numbers.
+between any two whole numbers within the range from -1,000,000 to 1,000,000.
 
-<PAdicCalculator caption="Figure 5: Calculating the p-adic difference between numbers for various primes p."/>
+<PAdicCalculator caption="Figure 5: Use this tool to calculating the p-adic difference between any numbers within the range from -1,000,000 to 1,000,000."/>
 
 Why in the world would you want to do this? I'm afraid a historical motivation
 would take us too far afield, so if nothing else, just take it as a mathematical
