--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Keeping Distances"
-date: "2019-07-01"
+date: "2019-07-16"
 featured_image: "../../images/featured_images/keeping_distances.jpg"
-caption: "distance caption"
-featured_image_caption: "distance image caption"
+caption: "On the intersection between Google maps, spelling mistakes, and prime numbers."
+featured_image_caption: "View from the top of a taxi. Photo by Clem Onojeghuo on Unsplash."
 outline: true
 ---
 
