adding tags to all stories

--- a/src/pages/articles/fairest-of-them-all.mdx
+++ b/src/pages/articles/fairest-of-them-all.mdx
@@ -4,6 +4,10 @@ date: "2019-01-08"
 featured_image: "../../images/featured_images/fairest_of_them_all.jpg"
 caption: "A mathematical exploration of fairness."
 featured_image_caption: "Playing a (hopefully fair) board game. Image credit: Brendan Humphreys from Pexels."
+tags:
+  - probability
+  - civics
+  - modeling
 ---
 
 import {
