--- a/src/pages/articles/four-weddings.mdx
+++ b/src/pages/articles/four-weddings.mdx
@@ -4,6 +4,11 @@ date: "2018-03-11"
 featured_image: "../../images/featured_images/four_weddings.jpg"
 caption: "Using data to study what makes a wedding work."
 featured_image_caption: "Four brides featured in an episode of four weddings. Image credit: TLC."
+tags:
+  - statistics
+  - game shows
+  - games
+  - relationships
 ---
 
 import {
