--- a/src/pages/articles/gaming-relationships-nonlinear.mdx
+++ b/src/pages/articles/gaming-relationships-nonlinear.mdx
@@ -4,6 +4,12 @@ date: "2017-12-10"
 featured_image: "../../images/featured_images/jane_the_virgin.jpg"
 caption: "Love, chaos, and a three body problem."
 featured_image_caption: "Jane's relationships may be chaotic, in a mathematically precise sense. Image credit: Jane the Virgin (The CW)."
+tags:
+  - differential equations
+  - relationships
+  - modeling
+  - chaos theory
+  - functions
 ---
 
 import { GamingNonlinearRelationships, Sidebar, Latex } from "story_components";
