--- a/src/pages/articles/harvesting-wins.mdx
+++ b/src/pages/articles/harvesting-wins.mdx
@@ -4,6 +4,12 @@ date: "2018-05-28"
 featured_image: "../../images/featured_images/orchard_child.jpg"
 caption: "Modeling the likelihood of board-game victory."
 featured_image_caption: "Adorable child eating fruit. Image credit: Alexas_Fotos on Pixabay."
+tags:
+  - games
+  - statistics
+  - probability
+  - decision theory
+  - modeling
 ---
 
 import {
