--- a/src/pages/articles/income-inequality.mdx
+++ b/src/pages/articles/income-inequality.mdx
@@ -4,6 +4,11 @@ date: "2018-01-30"
 featured_image: "../../images/featured_images/monopoly_man.jpg"
 caption: "Exploring income and wealth inequality through physics."
 featured_image_caption: "Monopoly man sitting in on a Senate hearing in the wake of the Equifax data breach during the fall of 2017. Image credit: Aaron P. Bernstein/Reuters."
+tags:
+  - income inequality
+  - modeling
+  - civics
+  - statistics
 ---
 
 import { EconomySimulation, Sidebar } from "story_components";
