--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -5,6 +5,10 @@ featured_image: "../../images/featured_images/taxicab_view.jpg"
 caption: "On the intersection between Google maps, spelling mistakes, and prime numbers."
 featured_image_caption: "View from the top of a taxi. Photo by Clem Onojeghuo on Unsplash."
 outline: true
+tags:
+  - geometry
+  - number theory
+  - functions
 ---
 
 import {
