--- a/src/pages/articles/mind-the-gerrymandered-gap.mdx
+++ b/src/pages/articles/mind-the-gerrymandered-gap.mdx
@@ -4,6 +4,12 @@ date: "2018-10-19"
 featured_image: "../../images/featured_images/mind_the_gerrymandered_gap.jpg"
 caption: "An interactive introduction to gerrymandering."
 featured_image_caption: "A map of the United States. Image credit: John-Mark Smith on Unsplash."
+tags:
+  - geometry
+  - statistics
+  - civics
+  - modeling
+  - voting
 ---
 
 import {
