--- a/src/pages/articles/strength-in-numbers.mdx
+++ b/src/pages/articles/strength-in-numbers.mdx
@@ -4,6 +4,10 @@ date: "2019-04-28"
 featured_image: "../../images/featured_images/strength_in_numbers.jpg"
 caption: "Exploring American voting trends in the 21st century."
 featured_image_caption: "Image credit: SnapwireSnaps from Pixabay."
+tags:
+  - statistics
+  - civics
+  - voting
 ---
 
 import {
