--- a/src/pages/articles/dishing-on-petrie.mdx
+++ b/src/pages/articles/dishing-on-petrie.mdx
@@ -4,6 +4,11 @@ date: "2018-04-20"
 featured_image: "../../images/featured_images/dishing_on_petrie.jpg"
 caption: "Mathematical models of toxic tech culture."
 featured_image_caption: "Michael Scott teaches us that workplace harassment isn't always intentional. That doesn't make it any less harmful. Image credit: NBC."
+tags:
+  - modeling
+  - statistics
+  - civics
+  - relationships
 ---
 
 import {
