--- a/src/pages/articles/gaming-relationships-linear.mdx
+++ b/src/pages/articles/gaming-relationships-linear.mdx
@@ -4,6 +4,11 @@ date: "2017-11-22"
 featured_image: "../../images/featured_images/murray.jpg"
 caption: "A mathematical ballad of love and hate."
 featured_image_caption: "Murray explaining his relationship model. Image credit: Flight of the Conchords (HBO)."
+tags:
+  - differential equations
+  - relationships
+  - modeling
+  - functions
 ---
 
 import { ResponsiveIFrame, GamingLinearRelationships, Sidebar, Latex } from "story_components";
