--- a/src/pages/articles/warming-dots.mdx
+++ b/src/pages/articles/warming-dots.mdx
@@ -4,6 +4,11 @@ date: "2018-07-19"
 featured_image: "../../images/featured_images/warming_dots.png"
 caption: "Looking to the stars to understand our future."
 featured_image_caption: "Humans looking to the cosmos for answers, before they are hunted down by predators, in the aptly-named film Predators. Image credit: 20th Century Fox."
+tags:
+  - modeling
+  - climate change
+  - differential equations
+  - astronomy
 ---
 
 import { WarmingDots } from "story_components";
